cluster/apps/bp-tools/Deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bp-tools-deployment
  labels:
    app.kubernetes.io/name: bp-tools
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: bp-tools
  replicas: 2
  revisionHistoryLimit: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bp-tools
    spec:
      containers:
      - name: bp-tools
        image: ghcr.io/mwgustin/bp-tools:v1.0.0
        ports:
        - containerPort: 5262
---
apiVersion: v1
kind: Service
metadata:
  name: bp-tools-service
spec:
  selector:
    app.kubernetes.io/name: bp-tools
  ports:
    - protocol: TCP
      port: 5262
