cluster/apps/bp-tools/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: bp-tools
  namespace: default
  annotations:
    gethomepage.dev/description: Blue Prince Tools
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Misc
    gethomepage.dev/icon: mdi-puzzle
    gethomepage.dev/name: Blue Prince Tools
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external
      namespace: envoy-gateway
  hostnames:
    - bptools.gustend.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: bp-tools-service
          port: 5262
          weight: 1
